Adds working update user profile function
